Fix black invisible text in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@ body {
   padding: 0 50px;
   width: 100%;
 }
+
+.dark {
+  color: white;
+}
